--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="center-box">
         <div class="center-item"></div>
     </div>
-    <div>
-        <img src="dojo-icon.png" alt="dojo-icon">
-        <h1>Coding Dojo</h1>
-        <ul>
+    <div id="navbar">
+        <img src="dojo-icon.png" alt="dojo-icon">
+        <h2>Coding Dojo</h2>
+        <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Contacts</a></li>
             <li><a href="#">About Me</a></li>
